bpo-30696: Fix the REPL looping endlessly when no memory

This also fixes partly ``PyRun_InteractiveOneFlags()`` that was returning -1
with no exception set.